--- a/layout.html
+++ b/layout.html
@@ -23,12 +23,11 @@
 {% endblock sidebar1 %}
 {%- block sidebar2 %}
 <div id="sidebar">
+  {%- include "searchbox.html" %}
   <div id="recentpost">
-    {%- include recentpages.html %}
+    {%- include "recentpages.html" %}
   </div>
-  {%- include searchbox.html %}
-  {%- include relations.html %}
-  {%- include localtoc.html %}
+  {#- include "relations.html" #}
   <div id="sidelinks">
     <h3>Links</h3>
     <ul>
